fix about text (Align to the right) in Mobile mode.

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ footer {
   #about {
     flex-direction: column; /* Stack items vertically */
     align-items: center; /* Center align the items */
-    text-align: center; /* Center the text */
+    text-align: left; /* Center the text */
   }
 
   .about-text {
